fix: mobile gap size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,6 +12,15 @@
 	--gap-section: 4rem;
 }
 
+@media screen and (max-width: 768px) {
+	:root {
+		--gap-title: 0.35rem;
+		--gap-nav: 0.5rem;
+		--gap-item: 1rem;
+		--gap-section: 2rem;
+	}
+}
+
 html,
 body {
   max-width: 100vw;
